--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node ./src/server.ts\"",
     "test": "npx prisma generate && jest",
     "build": "npx prisma generate && tsc",
-    "start": "ts-node ./src/server.ts"
+    "start": "ts-node ./src/server.ts",
+    "setup-db": "ts-node ./src/database/setupDatabase.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.16.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
@@ -24,7 +25,9 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "pg": "^8.12.0",
+    "pg-promise": "^11.9.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.16",
