--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-DATABASE_URL="postgresql://admin:URs3pYlajsAWUl2LEKX41KEtIgOO8Gzk@dpg-cq3l8tjqf0us73djfjp0-a.oregon-postgres.render.com/mathkids"
+DATABASE_URL="postgresql://bd_dev_mathkids_4j6z_user:52zvdDtF3ef0E9DMLHOV2aKMtvMikLAL@dpg-cqnq7o5svqrc73fqcujg-a.oregon-postgres.render.com/bd_dev_mathkids_4j6z"
 
 # Secrets for JWT
 SECRET_USER_COMMON="8IMkHycRwpsRhNXGOOPj9RFqsV36d1Rn/poCLpaouGU="
