--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-DATABASE_URL="postgresql://bd_dev_mathkids_4j6z_user:52zvdDtF3ef0E9DMLHOV2aKMtvMikLAL@dpg-cqnq7o5svqrc73fqcujg-a.oregon-postgres.render.com/bd_dev_mathkids_4j6z"
+DATABASE_URL="postgresql://mathkids_tznu_user:DJODWfCvSD4kkjs1LOEp8DgpdDUXUjkM@dpg-d13oh80gjchc73fdckkg-a.oregon-postgres.render.com/mathkids_tznu"
 
 # Secrets for JWT
 SECRET_USER_COMMON="8IMkHycRwpsRhNXGOOPj9RFqsV36d1Rn/poCLpaouGU="
